--- a/boxfoodology/resources/messages_en.properties
+++ b/boxfoodology/resources/messages_en.properties
@@ -7,7 +7,6 @@ error.passwords.notequal=passwords are not equal
 
 button.home=Home
 button.my.posts=My Posts
-button.about=About
 button.login=Log In
 button.signup=Sign Up
 button.save=Save
@@ -48,3 +47,70 @@ reset.page.expired=Your link has expired. You will need to request a new link.
 reset.page.repassword=Repeat password
 
 profile.page.header=Edit Profile
+
+menu.mains=Mains
+menu.ranges=Ranges
+menu.soups=Soups
+menu.sides=Sides
+menu.special.diets=Special diets
+menu.special.events=Special events
+menu.about.us=About us
+submenu.mains.chicken=Chicken
+submenu.mains.beef=Beef
+submenu.mains.lamb=Lamb
+submenu.mains.fish=Fish
+submenu.mains.vegetarian=Vegetarian
+submenu.mains.meals.for.one=Meals for one
+submenu.mains.meals.for.two=Meals for two
+submenu.mains.family.meals=Family meals
+
+submenu.ranges.thai=Thai
+submenu.ranges.italian=Italian
+submenu.ranges.maroccan=Maroccan
+submenu.ranges.french=French
+submenu.ranges.british=British
+submenu.ranges.korean=Korean
+submenu.ranges.mexican=Mexican
+submenu.ranges.chinese=Chinese
+submenu.ranges.japanese=Japanese
+
+submenu.soups.carrot=Carrot & coriander soup
+submenu.soups.chicken=Chicken & vegetables soup
+submenu.soups.lentil=Lentil soup
+submenu.soups.green=Super green soup
+submenu.soups.potato=Potato	& leak
+
+submenu.sides.mashed.potato=Mashed potato
+submenu.sides.cheesy.potato=Cheesy potato
+submenu.sides.roasted.carrot.broccoli=Roasted carrot & broccoli 
+submenu.sides.baked.parmesan.zuccini=Baked parmesan zuccini 
+submenu.sides.roasted.vegetables=Roasted vegetables
+submenu.sides.baked.parmesan.mashrooms=Baked parmesan mashrooms
+submenu.sides.garlic.roasted.carrots=Garlic roasted carrots
+submenu.sides.slow.cooked.creamed.corn=Slow cooked creamed corn
+submenu.sides.garlic.parmesan.roasted.potatoes=Garlic parmesan roasted potatoes
+
+submenu.special.diets.vegetarian=Vegetarian
+submenu.special.diets.vegan=Vegan
+
+submenu.special.events.ramadan=Ramadan
+submenu.special.events.easter=Easter
+submenu.special.events.christmas=Christmas
+submenu.special.events.provate.events=Provate events
+submenu.special.events.catering=Catering
+
+submenu.about.our.story=Our story
+submenu.about.our.values=Our values
+submenu.about.our.kitchen=Our kitchen
+submenu.about.meet.chef=Meet the chef
+submenu.about.careers=Careers
+submenu.about.contact=Contact
+submenu.about.find.us=Where to find us
+
+carousel.previous=Previous
+carousel.next=Next
+carousel.bestsellers=BESTSELLERS
+
+
+
+
