--- a/boxfoodology/resources/messages_en.properties
+++ b/boxfoodology/resources/messages_en.properties
@@ -4,6 +4,7 @@ error.notempty=may not be empty
 error.email=not a well-formed email address
 error.email.exists=email is already registered
 error.passwords.notequal=passwords are not equal
+error.food.image.too.big=image is too big, select smaller one
 
 button.home=Home
 button.my.posts=My Posts
@@ -111,6 +112,9 @@ carousel.previous=Previous
 carousel.next=Next
 carousel.bestsellers=BESTSELLERS
 
-
-
+food.header=Add new food
+food.name=Name
+food.description=Description
+food.category=Category
+food.image=Image
 
