Food edit/delete.

--- a/boxfoodology/resources/messages_en.properties
+++ b/boxfoodology/resources/messages_en.properties
@@ -12,6 +12,7 @@ button.login=Log In
 button.signup=Sign Up
 button.save=Save
 button.send=Send
+button.cancel=Cancel
 
 home.page.header=BoxFoodology
 
