Item details, orders, security.

--- a/boxfoodology/resources/messages_en.properties
+++ b/boxfoodology/resources/messages_en.properties
@@ -7,7 +7,7 @@ error.passwords.notequal=passwords are not equal
 error.food.image.too.big=image is too big, select smaller one
 
 button.home=Home
-button.my.posts=My Posts
+button.my.orders=My orders
 button.login=Log In
 button.signup=Sign Up
 button.save=Save
@@ -57,6 +57,7 @@ menu.sides=Sides
 menu.special.diets=Special diets
 menu.special.events=Special events
 menu.about.us=About us
+menu.admin=Admin
 submenu.mains.chicken=Chicken
 submenu.mains.beef=Beef
 submenu.mains.lamb=Lamb
@@ -119,4 +120,5 @@ food.description=Description
 food.category=Category
 food.image=Image
 food.price=Price
+food.menu=List of food
 
