--- a/boxfoodology/resources/messages_en.properties
+++ b/boxfoodology/resources/messages_en.properties
@@ -99,7 +99,7 @@ submenu.special.diets.vegan=Vegan
 submenu.special.events.ramadan=Ramadan
 submenu.special.events.easter=Easter
 submenu.special.events.christmas=Christmas
-submenu.special.events.provate.events=Provate events
+submenu.special.events.provate.events=Private events
 submenu.special.events.catering=Catering
 
 submenu.about.our.story=Our story
