Address, phone added to user and order mail.

--- a/boxfoodology/resources/messages_en.properties
+++ b/boxfoodology/resources/messages_en.properties
@@ -33,6 +33,8 @@ signup.page.lastname=Last name
 signup.page.female=Female
 signup.page.male=Male
 signup.page.gender=Gender
+signup.page.address=Address
+signup.page.phone=Phone
 
 signup.error.required.email=Enter an email address.
 
