--- a/boxfoodology/TODO
+++ b/boxfoodology/TODO
@@ -6,7 +6,7 @@
 # FAQ (uputstvo)
 # drustvene mreze
 # omoguciti dodavanje glavnih kategorija
-# konfiguracija bestseller-a
 # SEO
 # domen+hosting www.boxfoodology.com
-# created u sve tabele
+
+# konfiguracija bestseller-a  validacija, max br, delete, dodati na home
