Delete confirmation dialog, GUI.

--- a/boxfoodology/resources/messages_en.properties
+++ b/boxfoodology/resources/messages_en.properties
@@ -122,6 +122,6 @@ food.description=Description
 food.category=Category
 food.image=Image
 food.price=Price
-food.menu=List of food
+food.menu=Foods
 
 orders.clear=Clear list
