Food image dimension validation.

--- a/boxfoodology/resources/messages_en.properties
+++ b/boxfoodology/resources/messages_en.properties
@@ -5,6 +5,7 @@ error.email=not a well-formed email address
 error.email.exists=email is already registered
 error.passwords.notequal=passwords are not equal
 error.food.image.too.big=image is too big, select smaller one
+error.foog.image.dimension=image must be max width 450px and height 390px
 
 button.home=Home
 button.my.orders=My orders
