--- a/boxfoodology/resources/messages_en.properties
+++ b/boxfoodology/resources/messages_en.properties
@@ -4,7 +4,7 @@ error.notempty=may not be empty
 error.email=not a well-formed email address
 error.email.exists=email is already registered
 error.passwords.notequal=passwords are not equal
-error.food.image.too.big=image is too big, select smaller one
+error.food.image.too.big=file is too big, select smaller one
 error.foog.image.dimension=image must be max width 450px and height 390px
 
 button.home=Home
