--- a/boxfoodology/resources/messages_en.properties
+++ b/boxfoodology/resources/messages_en.properties
@@ -125,4 +125,10 @@ food.image=Image
 food.price=Price
 food.menu=Foods
 
+category.header=Add new category
+category.name=Name
+category.menu=Menu
+category.image=Image
+category.menu.name=Categories
+
 orders.clear=Clear list
