--- a/boxfoodology/resources/messages_en.properties
+++ b/boxfoodology/resources/messages_en.properties
@@ -5,7 +5,8 @@ error.email=not a well-formed email address
 error.email.exists=email is already registered
 error.passwords.notequal=passwords are not equal
 error.food.image.too.big=file is too big, select smaller one
-error.foog.image.dimension=image must be max width 450px and height 390px
+error.food.image.dimension=image must be max width 450px and height 390px
+error.show.on.home.page=if you want to show this category on home page you must select picture
 
 button.home=Home
 button.my.orders=My orders
@@ -130,5 +131,6 @@ category.name=Name
 category.menu=Menu
 category.image=Image
 category.menu.name=Categories
+category.show.on.home=Show on home page
 
 orders.clear=Clear list
