--- a/boxfoodology/resources/messages_en.properties
+++ b/boxfoodology/resources/messages_en.properties
@@ -62,49 +62,49 @@ menu.special.diets=Special diets
 menu.special.events=Special events
 menu.about.us=About us
 menu.admin=Admin
-submenu.mains.chicken=Chicken
-submenu.mains.beef=Beef
-submenu.mains.lamb=Lamb
-submenu.mains.fish=Fish
-submenu.mains.vegetarian=Vegetarian
-submenu.mains.meals.for.one=Meals for one
-submenu.mains.meals.for.two=Meals for two
-submenu.mains.family.meals=Family meals
+#submenu.mains.chicken=Chicken
+#submenu.mains.beef=Beef
+#submenu.mains.lamb=Lamb
+#submenu.mains.fish=Fish
+#submenu.mains.vegetarian=Vegetarian
+#submenu.mains.meals.for.one=Meals for one
+#submenu.mains.meals.for.two=Meals for two
+#submenu.mains.family.meals=Family meals
 
-submenu.ranges.thai=Thai
-submenu.ranges.italian=Italian
-submenu.ranges.maroccan=Maroccan
-submenu.ranges.french=French
-submenu.ranges.british=British
-submenu.ranges.korean=Korean
-submenu.ranges.mexican=Mexican
-submenu.ranges.chinese=Chinese
-submenu.ranges.japanese=Japanese
+#submenu.ranges.thai=Thai
+#submenu.ranges.italian=Italian
+#submenu.ranges.maroccan=Maroccan
+#submenu.ranges.french=French
+#submenu.ranges.british=British
+#submenu.ranges.korean=Korean
+#submenu.ranges.mexican=Mexican
+#submenu.ranges.chinese=Chinese
+#submenu.ranges.japanese=Japanese
 
-submenu.soups.carrot=Carrot & coriander soup
-submenu.soups.chicken=Chicken & vegetables soup
-submenu.soups.lentil=Lentil soup
-submenu.soups.green=Super green soup
-submenu.soups.potato=Potato	& leak
-
-submenu.sides.mashed.potato=Mashed potato
-submenu.sides.cheesy.potato=Cheesy potato
-submenu.sides.roasted.carrot.broccoli=Roasted carrot & broccoli 
-submenu.sides.baked.parmesan.zuccini=Baked parmesan zuccini 
-submenu.sides.roasted.vegetables=Roasted vegetables
-submenu.sides.baked.parmesan.mashrooms=Baked parmesan mashrooms
-submenu.sides.garlic.roasted.carrots=Garlic roasted carrots
-submenu.sides.slow.cooked.creamed.corn=Slow cooked creamed corn
-submenu.sides.garlic.parmesan.roasted.potatoes=Garlic parmesan roasted potatoes
-
-submenu.special.diets.vegetarian=Vegetarian
-submenu.special.diets.vegan=Vegan
-
-submenu.special.events.ramadan=Ramadan
-submenu.special.events.easter=Easter
-submenu.special.events.christmas=Christmas
-submenu.special.events.provate.events=Private events
-submenu.special.events.catering=Catering
+#submenu.soups.carrot=Carrot & coriander soup
+#submenu.soups.chicken=Chicken & vegetables soup
+#submenu.soups.lentil=Lentil soup
+#submenu.soups.green=Super green soup
+#submenu.soups.potato=Potato	& leak
+#
+#submenu.sides.mashed.potato=Mashed potato
+#submenu.sides.cheesy.potato=Cheesy potato
+#submenu.sides.roasted.carrot.broccoli=Roasted carrot & broccoli 
+#submenu.sides.baked.parmesan.zuccini=Baked parmesan zuccini 
+#submenu.sides.roasted.vegetables=Roasted vegetables
+#submenu.sides.baked.parmesan.mashrooms=Baked parmesan mashrooms
+#submenu.sides.garlic.roasted.carrots=Garlic roasted carrots
+#submenu.sides.slow.cooked.creamed.corn=Slow cooked creamed corn
+#submenu.sides.garlic.parmesan.roasted.potatoes=Garlic parmesan roasted potatoes
+#
+#submenu.special.diets.vegetarian=Vegetarian
+#submenu.special.diets.vegan=Vegan
+#
+#submenu.special.events.ramadan=Ramadan
+#submenu.special.events.easter=Easter
+#submenu.special.events.christmas=Christmas
+#submenu.special.events.provate.events=Private events
+#submenu.special.events.catering=Catering
 
 submenu.about.our.story=Our story
 submenu.about.our.values=Our values
