--- a/boxfoodology/resources/messages_en.properties
+++ b/boxfoodology/resources/messages_en.properties
@@ -134,3 +134,4 @@ category.menu.name=Categories
 category.show.on.home=Show on home page
 
 orders.clear=Clear list
+page.required.fields=Required fields
