--- a/boxfoodology/resources/messages_en.properties
+++ b/boxfoodology/resources/messages_en.properties
@@ -15,8 +15,11 @@ button.signup=Sign Up
 button.save=Save
 button.send=Send
 button.cancel=Cancel
+button.add=Add
 
 home.page.header=BoxFoodology
+home.welcome=Welcome to the best place in Dubai where you can order food.
+home.welcome.1=it's free, or
 
 login.page.login=Please Log In, or
 login.page.signup=Sign Up
@@ -37,6 +40,8 @@ signup.page.male=Male
 signup.page.gender=Gender
 signup.page.address=Address
 signup.page.phone=Phone
+signup.registration=Registration email sent
+signup.instruction=Instructions for resetting your password will be sent to your email.
 
 signup.error.required.email=Enter an email address.
 
@@ -135,3 +140,5 @@ category.show.on.home=Show on home page
 
 orders.clear=Clear list
 page.required.fields=Required fields
+
+aed=AED
