--- a/boxfoodology/resources/messages_en.properties
+++ b/boxfoodology/resources/messages_en.properties
@@ -16,6 +16,7 @@ button.save=Save
 button.send=Send
 button.cancel=Cancel
 button.add=Add
+button.send=Send
 
 home.page.header=BoxFoodology
 home.welcome=Welcome to the best place in Dubai where you can order food.
@@ -116,7 +117,7 @@ submenu.about.our.values=Our values
 submenu.about.our.kitchen=Our kitchen
 submenu.about.meet.chef=Meet the chef
 submenu.about.careers=Careers
-submenu.about.contact=Contact
+submenu.about.contact=Contact us
 submenu.about.find.us=Where to find us
 
 carousel.previous=Previous
